# cornerstone-community

./: .gitignore  README.md  README.rst  dashboard.json  metafile_format.rst  pyproject.toml  readthedocs.yaml  setup.ps1
.github/: CODEOWNERS  advanced_pr_template.md  basic_pr_template.md  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: advanced_pr_template.md  basic_pr_template.md  docs_pr_template.md
.github/scripts/: gds-infos.ps1  generate-docs.py  generate-plots.py  generate_plots.py
.github/workflows/: assign_reviewer.yml  generate-reference.yml
Developing_Phase_Components/SOI220/: SOI220_cband_TE_rib_apodized_GC_EBL_v1p0.gds  SOI220_cband_TE_rib_apodized_GC_focusing_EBL_v1p0.gds  SOI220_cband_TE_rib_apodized_GC_focusing_v1p0.gds  SOI220_cband_TE_rib_apodized_GC_v1p0.gds  SOI220_cband_TE_strip_8x25GHz_AWG_v0p0.gds  SOI220_cband_TE_strip_8x25GHz_AWG_v0p0.txt  SOI220_cband_TE_strip_apodized_GC_EBL_v1p0.gds  SOI220_cband_TE_strip_apodized_GC_EBL_v1p0.txt  SOI220_cband_TE_strip_apodized_GC_EBL_v1p2.gds  SOI220_cband_TE_strip_apodized_GC_v1p0.gds  (+75 more)
SiN_300nm/: CHANGELOG.md  layers.lyp
Si_220nm_active/: CHANGELOG.md  layers.lyp
Si_220nm_passive/: README.md
Student_SOI/: CHANGELOG.md  drc_rules.lydrc  layers.lyp  process_overview.yaml
TFLN_300nm/: process_overview.yaml
docs/: Appendix.md  Appendix.rst  FormattingGuidelines.md  FormattingGuidelines.rst  components_list.rst  conf.py  contributor-list.md  cross_sections_list.rst  ex_comp_yaml.rst  fibres_list.rst  index.md  metafile_format.rst  ports_list.rst  readme.md
i_220nm_passive/: README.md
(+631 files in other folders)
