[project]
name = "cornerstone-community"
version = "0.1.0"
description = "CORNERSTONE Community repository, uses Wavephotonics validator"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "klayout>=0.30.4.post1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3",
    "myst-parser>=4.0.1",
    "sphinx-book-theme>=1.1.4",
    "linkify-it-py>=2.0.3",
    "sphinx-design",
]
validator = [
    "pdk-data-verifier>=0.8.0",
]

[tool.uv]
package=false

[[tool.uv.index]]
name = "wp-public"
url = "https://dl.cloudsmith.io/basic/wave-photonics/wp-public/python/simple/"


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = ["SiN_300nm", "Si_220nm_active", "docs", "Off_the_shelf_designs"]

